--- a/Seurat_tutorial_2_pbmcsca_integrative_analysis_Seuratv5.qmd
+++ b/Seurat_tutorial_2_pbmcsca_integrative_analysis_Seuratv5.qmd
@@ -55,6 +55,22 @@ if (!dir.exists(file.path(work.dir,"output"))) dir.create(file.path(work.dir,"ou
 
 ```
 
+## Import pre-calculated objects for visualization
+
+If the compute-heavy steps in this notebook have already been run and saved, this permits notebook rendering of visualizations. Otherwise, set `eval: false` in the code chunk below and set `eval: true` throught this notebook as required.
+
+```{r}
+#| label: load_prev_objects
+#| echo: true
+#| eval: true
+#| message: false
+#| code-copy: true
+#| code-fold: true
+#| code-summary: "Code to import previous objects"
+
+load(file.path(work.dir,"tut2_all-integrations-complete_both_objs.RData"))
+```
+
 ## Introduction
 
 Integration of single-cell sequencing datasets, for example across experimental batches, donors, or conditions, is often an important step in scRNA-seq workflows. Integrative analysis can help to match shared cell types and states across datasets, which can boost statistical power, and most importantly, facilitate accurate comparative analysis across datasets. In previous versions of Seurat we introduced methods for integrative analysis, including our ‘anchor-based’ integration workflow. Many labs have also published powerful and pioneering methods, including [Harmony](https://github.com/immunogenomics/harmony) and [scVI](https://yoseflab.github.io/software/scvi-tools/), for integrative analysis.
@@ -72,7 +88,7 @@ Seurat v5 assays store data in layers. These layers can store raw, un-normalized
 ```{r}
 #| label: load_pbmcsca_runAzimuth
 #| echo: true
-#| eval: true
+#| eval: false
 #| message: false
 #| code-copy: true
 #| code-fold: true
@@ -88,12 +104,10 @@ obj
 # Layers(obj)
 ```
 
-The object contains data from nine different batches (stored in the `Method` column in the object metadata), representing seven different technologies. We will aim to integrate the different batches together. In previous versions of Seurat, we would require the data to be represented as nine different Seurat objects. When using Seurat v5 assays, we can instead keep all the data in one object, but simply split the layers. After splitting, there are now 18 layers (a counts and data layer for each batch). We can also run a standard scRNA-seq analysis (i.e. without integration). Note that since the data is split into layers, normalization and variable feature identification is performed for each batch independently (a consensus set of variable features is automatically identified).
-
-*Question* for future work: how can separate count objects (e.g. from different samples or assays) be loaded directly into a Seurat v5 object as layers, ready for later integration work, rather than import of a single object with subsequent splitting? Is this simply using the ['merge' function](https://satijalab.org/seurat/articles/essential_commands#merge-objects-without-integration)?
+The object contains data from nine different batches (stored in the `Method` column in the object metadata), representing seven different technologies.
 
 ```{r}
-#| label: split_batches_normalize
+#| label: cells_per_method_table
 #| echo: true
 #| eval: true
 #| message: false
@@ -106,14 +120,27 @@ method_tb <- method_tb |>
   gt() |>
   tab_header(title = "Cells per batch") # A wide array of table decoration methods is available with gt
 
+```
+
+We will aim to integrate the different batches together. In previous versions of Seurat, we would require the data to be represented as nine different Seurat objects. When using Seurat v5 assays, we can instead keep all the data in one object, but simply split the layers. After splitting, there are now 18 layers (a counts and data layer for each batch). We can also run a standard scRNA-seq analysis (i.e. without integration). Note that since the data is split into layers, normalization and variable feature identification is performed for each batch independently (a consensus set of variable features is automatically identified).
+
+*Question* for future work: how can separate count objects (e.g. from different samples or assays) be loaded directly into a Seurat v5 object as layers, ready for later integration work, rather than import of a single object with subsequent splitting? Is this simply using the ['merge' function](https://satijalab.org/seurat/articles/essential_commands#merge-objects-without-integration)?
+
+```{r}
+#| label: split_batches_normalize
+#| echo: true
+#| eval: false
+#| message: false
+#| code-copy: true
+
 obj[["RNA"]] <- split(obj[["RNA"]], f = obj$Method)
 obj
 
-# the non-SCTransform version of the layer normalization
-obj <- NormalizeData(obj)
-obj <- FindVariableFeatures(obj)
-obj <- ScaleData(obj)
-obj <- RunPCA(obj)
+# the non-SCTransform, 'standard' version of the layer normalization
+obj_std <- NormalizeData(obj)
+obj_std <- FindVariableFeatures(obj)
+obj_std <- ScaleData(obj)
+obj_std <- RunPCA(obj)
 
 # the SCTransform version of layer normalization
 options(future.globals.maxSize = 3e+09)
@@ -124,32 +151,50 @@ obj_sct <- RunPCA(obj_sct, npcs = 30, verbose = F)
 We can now visualize the results of a standard analysis without integration. Note that cells are grouping both by cell type and by underlying method. While a UMAP analysis is just a visualization of this, clustering this dataset would return predominantly batch-specific clusters. Especially if previous cell-type annotations were not available, this would make downstream analysis extremely challenging.
 
 ```{r}
-#| label: visualize_normalized_batches
+#| label: umap_normalized_batches
+#| echo: true
+#| eval: false
+#| message: false
+#| code-copy: true
+
+obj_std <- FindNeighbors(obj_std, dims = 1:30, reduction = "pca")
+obj_std <- FindClusters(obj_std, resolution = 2, cluster.name = "unintegrated_clusters")
+obj_std <- RunUMAP(obj_std, dims = 1:30, reduction = "pca", reduction.name = "umap.unintegrated")
+```
+
+```{r}
+#| label: plot_normalized_batches
 #| echo: true
 #| eval: true
 #| message: false
 #| code-copy: true
 
-obj <- FindNeighbors(obj, dims = 1:30, reduction = "pca")
-obj <- FindClusters(obj, resolution = 2, cluster.name = "unintegrated_clusters")
-obj <- RunUMAP(obj, dims = 1:30, reduction = "pca", reduction.name = "umap.unintegrated")
 # make summary plots colored by batch or by cell type annotation (predicted.celltype)
 # cell type annotations were previously added by Azimuth
-DimPlot(obj, reduction = "umap.unintegrated", group.by = c("Method", "predicted.celltype.l2"))
+DimPlot(obj_std, reduction = "umap.unintegrated", group.by = c("Method", "predicted.celltype.l2"))
 ```
 
 Interestingly, the use of the SCTransform procedure for normalization and scaling produces transformed, unintegrated data with less platform dependency apparent on initial UMAP plots.
 
 ```{r}
-#| label: visualize_SCT-normalized_batches
+#| label: umap_SCT-normalized_batches
 #| echo: true
-#| eval: true
+#| eval: false
 #| message: false
 #| code-copy: true
 
 obj_sct <- FindNeighbors(obj_sct, dims = 1:30, reduction = "pca")
 obj_sct <- FindClusters(obj_sct, resolution = 2, cluster.name = "unintegrated_sct_clusters")
 obj_sct <- RunUMAP(obj_sct, dims = 1:30, reduction = "pca", reduction.name = "umap.sct.unintegrated")
+```
+
+```{r}
+#| label: plot_SCT-normalized_batches
+#| echo: true
+#| eval: true
+#| message: false
+#| code-copy: true
+
 # make summary plots colored by batch or by cell type annotation (predicted.celltype)
 # cell type annotations were previously added by Azimuth
 DimPlot(obj_sct, reduction = "umap.sct.unintegrated", group.by = c("Method", "predicted.celltype.l2"))
@@ -171,40 +216,42 @@ You can find more detail on each method, and any installation prerequisites, in 
 
 *Note*: the `SeuratWrappers` bundle of R functions available Sep 2024 only permitted `scVIIntegration` to use a conda environment. I modified this Sep 2024 to use a standard Python virtualenv instead, sourced the new function at the start of this notebook, and used it here.
 
+### Standard normalization
+
 Each of the following lines perform a new integration using a single function call (on the data normalized with the pre-SCTransform methods in `obj`):
 
 ```{r}
 #| label: streamlined_integrations
 #| echo: true
-#| eval: true
+#| eval: false
 #| message: false
 #| warning: false
 #| code-copy: true
 
 options(future.globals.maxSize = 3e+09)
 
-obj <- IntegrateLayers(
-  object = obj, method = FastMNNIntegration,
+obj_std <- IntegrateLayers(
+  object = obj_std, method = FastMNNIntegration,
   new.reduction = 'integrated.mnn',
   verbose = FALSE)
 
-obj <- IntegrateLayers(
-  object = obj, method = CCAIntegration,
+obj_std <- IntegrateLayers(
+  object = obj_std, method = CCAIntegration,
   orig.reduction = "pca", new.reduction = 'integrated.cca',
   verbose = FALSE)
 
-obj <- IntegrateLayers(
-  object = obj, method = RPCAIntegration,
+obj_std <- IntegrateLayers(
+  object = obj_std, method = RPCAIntegration,
   orig.reduction = "pca", new.reduction = 'integrated.rpca',
   verbose = FALSE)
 
-obj <- IntegrateLayers(
-  object = obj, method = HarmonyIntegration,
+obj_std <- IntegrateLayers(
+  object = obj_std, method = HarmonyIntegration,
   orig.reduction = "pca", new.reduction = 'harmony',
   verbose = FALSE)
 
-# obj <- IntegrateLayers(
-#   object = obj, method = scVIIntegration,
+# obj_std <- IntegrateLayers(
+#   object = obj_std, method = scVIIntegration,
 #   new.reduction = "integrated.scvi",
 #   virtual_env = "C:/Users/sjmat/venv_compbio",
 #   verbose = FALSE
@@ -225,6 +272,8 @@ scvi.reduc <- scvi.reduc[Cells(obj),] # ensures matrix corresponds to cell names
 obj[["integrated.scvi"]] <- CreateDimReducObject(embeddings = scvi.reduc)
 ```
 
+### SCTransform normalization
+
 The following code block will do the same, this time using the SCTransform-normalized layers in `obj_sct`.\
 
 *Notes Sep 2024*:
@@ -236,10 +285,14 @@ It may be also that the implementation of `scvi-tools` from the `SeuratWrappers`
 ```{r}
 #| label: streamlined_sct_integrations
 #| echo: true
-#| eval: true
+#| eval: false
 #| message: false
 #| warning: false
 #| code-copy: true
+#| code-fold: true
+#| code-summary: "Code for SCT object layer integration"
+
+options(future.globals.maxSize = 6e+09)
 
 # obj_sct <- IntegrateLayers(
 #   object = obj_sct, method = FastMNNIntegration,
@@ -274,16 +327,28 @@ obj_sct <- IntegrateLayers(
 ```
 
 <!-- # ```{r} -->
+
 <!-- # #| label: incorporate_previous_sct_scvi -->
+
 <!-- # #| echo: true -->
+
 <!-- # #| eval: false -->
+
 <!-- # #| message: false -->
+
 <!-- # #| code-copy: true -->
+
 <!-- #  -->
+
 <!-- # scvi.reduc.sct <- Embeddings(readRDS(file.path(work.dir, "output/pbmcsca_split_sct_integr_scvi_only.rds")), reduction="integrated.scvi") # extracts a matrix of embeddings -->
+
 <!-- # scvi.reduc.sct <- scvi.reduc.sct[Cells(obj_sct),] # ensures matrix corresponds to cell names in `obj` -->
+
 <!-- # obj_sct[["integrated.scvi"]] <- CreateDimReducObject(embeddings = scvi.reduc.sct) -->
+
 <!-- # ``` -->
+
+## Visualize layer integration steps
 
 <details>
 
